# uv-Python

./: README.md
uv-001/: pyproject.toml
uv-001/src/uv_001/: __init__.py  hello.py
uv-002-litellm/: pyproject.toml
uv-002-litellm/src/uv_litellm_002/: __init__.py  gemini.py
uv-003-crewai-flow/: crewai_flow.html  fun_fact.md  pyproject.toml
uv-003-crewai-flow/src/uv_004_crewai_flow/: __init__.py  main.py  main1.py  main2.py
uv-004-crewai-pattern-design/: pyproject.toml
uv-004-crewai-pattern-design/src/uv_005_crewai/: __init__.py  main.py  main2.py  main3.py  project.py  project_router.py
