[project]
name = "uv-004-crewai-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bisma Shafiq", email = "bismashafiq26@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.100.1",
    "litellm>=1.59.8",
]

[project.scripts]
uv-004-crewai-flow = "uv_004_crewai_flow:main"
sampleflow= "uv_004_crewai_flow.main:kickoff"
chain_prompt= "uv_004_crewai_flow.main1:kickoff"
route_run= "uv_004_crewai_flow.main2:kickoff"
route_plot= "uv_004_crewai_flow.main2:plot"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
